<resources>
    <string name="app_name">recTV</string>
    <string name="thumbs_up">Thumbs Up</string>
    <string name="or">or</string>
    <string name="thumbs_down">Thumbs Down</string>
    <string name="app_description">TV shows to\nget highly detailed\nrecommendations on\nwhat to watch next</string>

    <string name="btn_continue">Continue</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="back_arrow">Back Arrow</string>

    <string name="recommended">Recommended</string>
    <string name="fansofshooter">Fans of Shooter, also liked</string>

    <string name="personofinterest_poster">Person of Interest Poster</string>
    <string name="blindspot_poster">Blindspot Poster</string>
    <string name="agentx_poster">Agent X Poster</string>
    <string name="theloomingtower_poster">The Looming Tower Poster</string>
    <string name="ncisla_poster">NCIS LA Poster</string>
    <string name="taken_poster">Taken Poster</string>

    <string name="show_thumb">Show Thumb</string>
    <string name="like_icon">Like Icon</string>
    <string name="dislike_icon">Dislike Icon</string>

    <string name="liked">Liked</string>
    <string name="disliked">Disliked</string>

    <string name="prime_video">Prime Video Logo</string>

    <string name="showdetails_download_error">There was an error download the show details for %1$s.</string>
    <string name="showdetails_json_error">Error processing the show details.</string>

    <string name="season_1">Season 1</string>

    <string name="personofinterest_name">Person+of+Interest</string>
    <string name="personofinterest_tmbdid">1411</string>

    <string name="stream_personofinterest">Stream Person of Interest</string>

    <string name="loved_personofinterest">People that loved Person of Interest, enjoyed</string>
    <string name="hated_personofinterest">People that disliked Person of Interest, instead watched</string>
    <string name="dislikedrecommendations_personofinterest">Numb3rs\nChuck\nScorpion\nBurn Notice</string>

    <string name="blindspot_name">blindspot</string>
    <string name="blindspot_tmbdid">62710</string>

    <string name="stream_blindspot">Watch Blindspot</string>

    <string name="loved_blindspot">People that loved Blindspot, enjoyed</string>
    <string name="hated_blindspot">People that disliked Blindspot, instead watched</string>
    <string name="dislikedrecommendations_blindspot">Bones\nCastle\nNCIS\nMysteries of Laura</string>

    <string name="ncisla_name">ncis+los+angeles</string>
    <string name="ncisla_tmbdid">17610</string>

    <string name="stream_ncisla">Stream NCIS: Los Angeles</string>

    <string name="loved_ncisla">People that loved NCIS: Los Angeles, enjoyed</string>
    <string name="hated_ncisla">People that disliked NCIS: Los Angeles, instead watched</string>
    <string name="dislikedrecommendations_ncisla">Elementary\nBerlin Station\nHomeland\nSpooks</string>

    <string name="shared_prefs_filename" translatable="false">uk.ac.rgu.rectv</string>
    <string name="shared_pref_personofinterest_liked" translatable="false">Person of Interest Liked or Disliked</string>
    <string name="shared_pref_blindspot_liked" translatable="false">Blindspot Liked or Disliked</string>
    <string name="shared_pref_ncisla_liked" translatable="false">NCIS: Los Angeles Liked or Disliked</string>
</resources>
