<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".ShowPart2Activity">

    <ImageView
        android:id="@+id/ivThumbsUp"
        android:layout_width="106dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/thumbs_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/like_outline" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toBottomOf="@+id/ivThumbsUp"
        app:layout_constraintEnd_toStartOf="@+id/ivThumbsDown"
        app:layout_constraintStart_toEndOf="@+id/ivThumbsUp"
        app:layout_constraintTop_toTopOf="@+id/ivThumbsUp" />

    <ImageView
        android:id="@+id/ivThumbsDown"
        android:layout_width="112dp"
        android:layout_height="127dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/thumbs_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivThumbsUp"
        app:srcCompat="@drawable/dislike_outline" />

    <TextView
        android:id="@+id/tvStreamPersonofInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stream_personofinterest"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivThumbsUp" />

    <ImageView
        android:id="@+id/ivPrimeVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/prime_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStreamPersonofInterest"
        app:srcCompat="@drawable/prime_video" />

    <TextView
        android:id="@+id/tvPersonofInterestLoved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/loved_personofinterest"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPrimeVideo" />

    <TextView
        android:id="@+id/tvRecomendationsPersonofInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/ivBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonofInterestLoved" />

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="76dp"
        android:layout_height="93dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/left_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>