<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".ShowPOI2Activity">

    <TextView
        android:id="@+id/tvStreamPersonofInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/stream_personofinterest"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPrimeVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/prime_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStreamPersonofInterest"
        app:srcCompat="@drawable/prime_video" />

    <ImageView
        android:id="@+id/ivLikeOutline"
        android:layout_width="89dp"
        android:layout_height="77dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/like_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPrimeVideo"
        app:srcCompat="@drawable/like_outline" />

    <TextView
        android:id="@+id/tvPOIor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintBottom_toBottomOf="@+id/ivLikeOutline"
        app:layout_constraintEnd_toStartOf="@+id/ivDislikeOutline"
        app:layout_constraintStart_toEndOf="@+id/ivLikeOutline"
        app:layout_constraintTop_toTopOf="@+id/ivLikeOutline" />

    <ImageView
        android:id="@+id/ivDislikeOutline"
        android:layout_width="89dp"
        android:layout_height="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/dislike_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivLikeOutline"
        app:srcCompat="@drawable/dislike_outline" />

    <TextView
        android:id="@+id/tvPersonofInterestLoved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/loved_personofinterest"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLikeOutline" />

    <TextView
        android:id="@+id/tvRecommendations"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:fontFamily="@font/lato"
        app:layout_constraintBottom_toTopOf="@+id/ivBackArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonofInterestLoved" />

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="50dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/left_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>
