<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ShowBlindspotActivity">

    <Button
        android:id="@+id/btnAppName"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBlindspotShowThumb"
        android:layout_width="409dp"
        android:layout_height="244dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/show_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppName"
        app:srcCompat="@drawable/blindspot_thumb" />

    <TextView
        android:id="@+id/tvBlindspotShowStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBlindspotShowThumb" />

    <TextView
        android:id="@+id/tvBlindspotShowDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/lato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBlindspotShowStats" />

    <TextView
        android:id="@+id/tvBlindspotSeason1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/season_1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="@+id/tvBlindspotShowDescription"
        app:layout_constraintStart_toStartOf="@+id/tvBlindspotShowDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvBlindspotShowDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShowName"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ivBlindspotDownArrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBlindspotSeason1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivBlindspotDownArrow"
        android:layout_width="63dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/down_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/down_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>
