<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RecommendationsActivity">

    <Button
        android:id="@+id/btnAppName"
        style="@style/buttonStyle"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRecommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/recommended"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppName" />

    <ImageView
        android:id="@+id/ivPersonofInterestPoster"
        android:layout_width="110dp"
        android:layout_height="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/personofinterest_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecommended"
        app:srcCompat="@drawable/personofinterest_poster" />

    <ImageView
        android:id="@+id/ivBlindspotPoster"
        android:layout_width="115dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/blindspot_poster"
        app:layout_constraintEnd_toStartOf="@+id/ivNCISLAPoster"
        app:layout_constraintStart_toEndOf="@+id/ivPersonofInterestPoster"
        app:layout_constraintTop_toTopOf="@+id/ivPersonofInterestPoster"
        app:srcCompat="@drawable/blindspot_poster" />

    <ImageView
        android:id="@+id/ivNCISLAPoster"
        android:layout_width="115dp"
        android:layout_height="188dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/ncisla_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBlindspotPoster"
        app:srcCompat="@drawable/ncisla_poster" />

    <TextView
        android:id="@+id/tvFansofPersonofInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/fansofpersonofinterest"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBlindspotPoster" />

    <ImageView
        android:id="@+id/ivPoster4"
        android:layout_width="109dp"
        android:layout_height="158dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/show_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFansofPersonofInterest"
        app:srcCompat="@drawable/xenawarriorprincess_poster" />

    <ImageView
        android:id="@+id/ivPoster5"
        android:layout_width="105dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/show_poster"
        app:layout_constraintEnd_toStartOf="@+id/ivPoster6"
        app:layout_constraintStart_toEndOf="@+id/ivPoster4"
        app:layout_constraintTop_toTopOf="@+id/ivPoster4"
        app:srcCompat="@drawable/buffyvampireslayer_poster" />

    <ImageView
        android:id="@+id/ivPoster6"
        android:layout_width="120dp"
        android:layout_height="169dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/show_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPoster4"
        app:srcCompat="@drawable/humans_poster" />

</androidx.constraintlayout.widget.ConstraintLayout>
