<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ShowNCISLAActivity">

    <Button
        android:id="@+id/btnAppName"
        style="@style/buttonStyle"
        android:layout_width="168dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivNCISLAShowThumb"
        android:layout_width="409dp"
        android:layout_height="244dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/show_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppName"
        app:srcCompat="@drawable/ncisla_thumb" />

    <TextView
        android:id="@+id/tvNCISLAShowStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/fredoka_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNCISLAShowThumb" />

    <TextView
        android:id="@+id/tvNCISLAShowDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontFamily="@font/lato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNCISLAShowStats" />

    <ImageView
        android:id="@+id/ivNCISLADownArrow"
        android:layout_width="53dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/down_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNCISLAShowDescription"
        app:srcCompat="@drawable/down_arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>